# best-practices

./: .gitignore  Cargo.toml  README.md
examples/: Cargo.toml
examples/simplecli/: Cargo.toml
examples/simplecli/src/: main.rs
examples/treetool/: Cargo.toml
examples/treetool/src/: main.rs
src/: error.rs  lib.rs
src/cli/: io.rs  mod.rs
src/cli/fs/: mod.rs  tree.rs  treeindex.rs  treeitem.rs  treelist.rs
