[package]
name = "best-practices"
version = "0.1.0"
edition = "2018"
authors = ["Dave Huseby <dave@cryptid.tech>"]
description = "A library of useful tricks"
repository = "https://github.com/cryptidtech/best-practices.git"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
blake2b_simd = "0.5"
lazy_static = "1.4"
log = "0.4"
thiserror = "1.0"
